fixed-player sync & camera visible issue in main.js

--- a/__server__/__client__/webgl/css/align.css
+++ b/__server__/__client__/webgl/css/align.css
@@ -2,6 +2,7 @@
     margin: 0 ;
     padding: 0;
     overflow: hidden ;
+/*    z-index: -996 ;*/
 }
 body {
    background-color: #e6f7ff ;
@@ -15,7 +16,7 @@ body {
     z-index: 999;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: flex; /*flex*/
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -38,7 +39,7 @@ body {
     display: none;
     width: 100% ;
     height: 100% ;
-    z-index: -999 ;
+/*    z-index: -999 ;*/
     flex-wrap: wrap ;
     position: absolute ;
 /*    justify-content: center ;*/
@@ -56,12 +57,13 @@ body {
 
 #main-setting {
     display: flex ;
-    width: 100% ;
-    height: 100% ;
-    z-index: -998 ;
+    width: 250px ;
+    height: 250px ;
+/*    z-index: -998 ;*/
     flex-wrap: wrap;
 /*    flex-wrap: nowrap ;*/
     position: absolute;
+/*    margin-left: 100px ;*/
 }
 
 #show-setting {
@@ -75,6 +77,7 @@ body {
 #show-setting-button {
     height: 50px ;
     widows: 50px ;
+/*    z-index: -997 ;*/
     display: flex ;
     flex-wrap: nowrap ;
 /*    align-self: flex-end ;*/
